--- a/index.html
+++ b/index.html
@@ -6,19 +6,52 @@
   <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
+  <style>
+    body {
+      background-color: lightcyan; /* Setting background color to light cyan */
+      font-family: Arial, sans-serif; /* Adding a clean, simple font */
+      padding: 20px;
+    }
+
+    #map1, #plot1 {
+      margin-bottom: 20px;
+    }
+
+    .placeholder-text {
+      margin-top: 10px;
+      color: #333;
+      line-height: 1.6;
+    }
+  </style>
 </head>
 <body>
+
+  <h1>FIT3179 - Visualisation 2</h1>
+
+  <!-- Map Visualization -->
   <div id="map1"></div>
-  <div id="scatter_plot"></div>
+  <div class="placeholder-text">
+    <p>This map showcases the distribution of forest areas across different jurisdictions in Australia.</p>
+    <p>The forest categories include native forest, commercial plantations, and other types of forests.</p>
+    <p>Each category is represented with corresponding data for easier comparison and understanding.</p>
+  </div>
+
+  <!-- Plot Visualization -->
+  <div id="plot1"></div>
+  <div class="placeholder-text">
+    <p>This plot highlights the variation in forest types across jurisdictions.</p>
+    <p>It helps in understanding the spread of different forest types more effectively.</p>
+  </div>
 
   <script>
-    vegaEmbed('#map', "vg/w10_map.json").then(function(result) {
+    vegaEmbed('#map1', "map.vg.json").then(function(result) {
       // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
     }).catch(console.error);
 
-    vegaEmbed('#scatter_plot', "vg/task1_chart.vg.json").then(function(result) {
+    vegaEmbed('#plot1', "plot1.json").then(function(result) {
       // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
     }).catch(console.error);
   </script>
+
 </body>
 </html>
