--- a/index.html
+++ b/index.html
@@ -20,8 +20,14 @@
       text-align: center; /* Centers text content */
     }
 
-    #map1, #plot1 {
-      width: 80%; /* Adjust width for responsiveness */
+    #map1 {
+      width: 90vw; /* Set the width to 90% of the viewport width */
+      height: 60vh; /* Set the height to 60% of the viewport height */
+      margin-bottom: 20px;
+    }
+
+    #plot1 {
+      width: 80%;
       margin-bottom: 20px;
     }
 
