--- a/index.html
+++ b/index.html
@@ -8,26 +8,12 @@
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
   <style>
     body {
-      background-color: lightcyan;
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      text-align: center; /* Centers text content */
+      background-color: lightcyan; /* Setting background color to light cyan */
+      font-family: Arial, sans-serif; /* Adding a clean, simple font */
+      padding: 20px;
     }
 
-    #map1 {
-      width: 90vw; /* Set the width to 90% of the viewport width */
-      height: 60vh; /* Set the height to 60% of the viewport height */
-      margin-bottom: 20px;
-    }
-
-    #plot1 {
-      width: 80%;
+    #map1, #plot1 {
       margin-bottom: 20px;
     }
 
@@ -35,7 +21,6 @@
       margin-top: 10px;
       color: #333;
       line-height: 1.6;
-      max-width: 80%; /* Limits the text width for readability */
     }
   </style>
 </head>
