--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <p>This map showcases the distribution of forest areas across different jurisdictions in Australia.</p>
     <p>The forest categories include native forest, commercial plantations, and other types of forests.</p>
     <p>Each category is represented with corresponding data for easier comparison and understanding.</p>
+    <p>Each category is represented with corresponding data for easier comparison and understanding.</p>
   </div>
 
   <!-- Plot Visualization -->
@@ -41,6 +42,7 @@
   <div class="placeholder-text">
     <p>This plot highlights the variation in forest types across jurisdictions.</p>
     <p>It helps in understanding the spread of different forest types more effectively.</p>
+    <p>Each category is represented with corresponding data for easier comparison and understanding.</p>
   </div>
 
   <script>
